# VayuGrid

./: .dockerignore  .env.example  .gitignore  Baseline_Protocol_and_Success_Metrics.md  CortexCore_PPO.ipynb  PROJECT_PROGRESS.md  README.md  VIDEO_DEMO_FEATURE.md  VIDEO_SCRIPT.md  VayuGNN.ipynb  VayuGrid_Team_Plan.md  demo_title_card.html  demo_title_card_community.html  demo_title_card_homeowner.html  demo_video_script.md  docker-compose.yml  nsrdb_data_download.py  pecan_data_wireup.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai/: __init__.py  demo.py  schemas.py
ai/baselines/: __init__.py  b0.py  b1.py  b2.py  controller.py  metrics.py  runner.py
ai/core/: __init__.py  cortexcore.py  models.py  normalizer.py  ppo.py
ai/env/: __init__.py  gym_env.py
ai/gnn/: __init__.py  dataset.py  inference.py  model.py  signals.py  vayu_gnn.py
ai/training/: __init__.py  config.py  metrics.py
api/: __init__.py
api/app/: __init__.py  anomaly.py  breach.py  config.py  db.py  main.py  retention.py  schemas.py  security.py  vault_client.py
api/app/routers/: __init__.py  admin.py  auth.py  community.py  dashboards.py  nodes.py  privacy.py  signals.py  trading.py
docs/: api_phase4.md  api_phase6.md  output_schema_definitions.md  scenario_configuration_guide.md
examples/: example_instantiation.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ProgressBar.tsx  StatCard.tsx  StatusBadge.tsx  index.ts
frontend/src/hooks/: useLiveStream.ts
frontend/src/views/: CommunityDashboard.tsx  HomeownerDashboard.tsx  Login.tsx  OperatorDashboard.tsx
infra/api/: Dockerfile
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/mlflow/: Dockerfile
infra/nginx/: Dockerfile  nginx.conf
infra/postgres/: 03-phase4-trading.sql  04-phase5-security.sql
infra/postgres/init/: 01-timescaledb.sql
infra/prometheus/: prometheus.yml
infra/tls/: gen_certs.sh
infra/tls/ca/: ca.crt  ca.key  ca.srl
infra/tls/client/: node-001.crt  node-001.csr  node-001.key
infra/tls/server/: server.crt  server.csr  server.key
infra/vault/: README.md  init.sh
mesh/: __init__.py  messages.py  rabbitmq_bus.py
scenarios/: phase1_debug.json  phase1_default.json  phase1_demo.json  phase1_stress.json
scripts/: demo.py  demo_runner.py  evaluate_agent.py  live_data_flow.py  seed_frontend.py  train_cortexcore.py  train_vayugnn.py
services/: __init__.py  matching_engine.py  security_scheduler.py
simulator/: README.md  __init__.py  config.py  faults.py  graph.py  load_profiles.py  models.py  simulator.py  thermal.py
tests/: test_ai_schemas.py  test_api.py  test_baselines.py  test_integration.py  test_ledger.py  test_mesh_security.py  test_pecan_data.py  test_pricing.py  test_simulator.py  test_trading_engine.py
trading/: __init__.py  db_matching.py  engine.py  ledger.py  models.py  order_book.py  pricing.py  signatures.py
